# quorum_coding_challenge

./: .gitignore  Dockerfile  build.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  test.csv
backend/: README.md  manage.py  pyproject.toml
backend/api/: __init__.py  urls.py  views.py
backend/backend/: __init__.py  settings.py  urls.py
containers/backend/: Dockerfile  entrypoint.sh
containers/frontend/: Dockerfile
frontend/: package-lock.json  package.json
frontend/src/: App.js
old/backend/: main.py  settings.py
old/backend/api/: urls.py
old/frontend/: package.json
src/backend/: api.py  main.py
src/backend/api/: views.py
src/frontend/: package-lock.json
src/frontend/src/: App.js
